test/src/export_base_buffer.mlt
open! Core_kernel

module Buffer_is_from_base : module type of struct
  include Base.Buffer
end =
  Buffer

[%%expect]

module Buffer_is_from_caml : module type of struct
  include Caml.Buffer
end =
  Buffer

[%%expect
  {|
Line _, characters _-_:
Error: Signature mismatch:
       ...
       The value `add_int64_le' is required but not provided
       File "buffer.mli", line 282, characters 0-37: Expected declaration
       The value `add_int64_be' is required but not provided
       File "buffer.mli", line 276, characters 0-37: Expected declaration
       The value `add_int64_ne' is required but not provided
       File "buffer.mli", line 270, characters 0-38: Expected declaration
       The value `add_int32_le' is required but not provided
       File "buffer.mli", line 264, characters 0-37: Expected declaration
       The value `add_int32_be' is required but not provided
       File "buffer.mli", line 258, characters 0-37: Expected declaration
       The value `add_int32_ne' is required but not provided
       File "buffer.mli", line 252, characters 0-37: Expected declaration
       The value `add_int16_le' is required but not provided
       File "buffer.mli", line 246, characters 0-35: Expected declaration
       The value `add_int16_be' is required but not provided
       File "buffer.mli", line 240, characters 0-35: Expected declaration
       The value `add_int16_ne' is required but not provided
       File "buffer.mli", line 234, characters 0-35: Expected declaration
       The value `add_uint16_le' is required but not provided
       File "buffer.mli", line 228, characters 0-36: Expected declaration
       The value `add_uint16_be' is required but not provided
       File "buffer.mli", line 222, characters 0-36: Expected declaration
       The value `add_uint16_ne' is required but not provided
       File "buffer.mli", line 216, characters 0-36: Expected declaration
       The value `add_int8' is required but not provided
       File "buffer.mli", line 210, characters 0-31: Expected declaration
       The value `add_uint8' is required but not provided
       File "buffer.mli", line 204, characters 0-32: Expected declaration
       The value `of_seq' is required but not provided
       File "buffer.mli", line 180, characters 0-28: Expected declaration
       The value `add_seq' is required but not provided
       File "buffer.mli", line 176, characters 0-37: Expected declaration
       The value `to_seqi' is required but not provided
       File "buffer.mli", line 171, characters 0-37: Expected declaration
       The value `to_seq' is required but not provided
       File "buffer.mli", line 166, characters 0-28: Expected declaration
       The value `truncate' is required but not provided
       File "buffer.mli", line 158, characters 0-31: Expected declaration
       The value `output_buffer' is required but not provided
       File "buffer.mli", line 154, characters 0-44: Expected declaration
       The value `add_channel' is required but not provided
       File "buffer.mli", line 147, characters 0-48: Expected declaration
       The value `add_substitute' is required but not provided
       File "buffer.mli", line 127, characters 0-62: Expected declaration
       The value `add_utf_16be_uchar' is required but not provided
       File "buffer.mli", line 104, characters 0-45: Expected declaration
       The value `add_utf_16le_uchar' is required but not provided
       File "buffer.mli", line 97, characters 0-45: Expected declaration
       The value `add_utf_8_uchar' is required but not provided
       File "buffer.mli", line 91, characters 0-42: Expected declaration
       The value `to_bytes' is required but not provided
       File "buffer.mli", line 49, characters 0-25: Expected declaration
|}]
